--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,34 @@
 html {
-  background-color: #444;
+  font-family: "Open Sans", sans-serif;
   line-height: 1.5;
   margin: 1.5rem;
 }
 
 h2 {
-
+  text-align: center;
 }
 
-h3 {
-
-}
-
-h4 {
-
+.hgroup {
+  font-weight: bold;
 }
 
 p{
 
 }
 
-img {
+a {
+  background-color: #444;
+  padding: .6rem;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  display: inline;
+}
 
+ul li {
+  list-style-type: none;
+}
+
+img {
+  width: 16rem;
 }
