--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,16 @@
 html {
   font-family: "Open Sans", sans-serif;
+  background-color: #ccc;
+  box-sizing: border-box;
   line-height: 1.5;
+}
+
+body {
   margin: 1.5rem;
+}
+
+* {
+  box-sizing: inherit;
 }
 
 h2 {
@@ -9,11 +18,12 @@ h2 {
 }
 
 .hgroup {
+  justify-content: space-around;
   font-weight: bold;
 }
 
-p{
-
+p {
+  align-items: baseline;
 }
 
 a {
@@ -30,5 +40,6 @@ ul li {
 }
 
 img {
-  width: 16rem;
+  display: flex;
+  width: 5rem;
 }
