--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  margin: 1.5rem;
+  margin: 0;
 }
 
 * {
@@ -18,12 +18,7 @@ h2 {
 }
 
 .hgroup {
-  justify-content: space-around;
   font-weight: bold;
-}
-
-p {
-  align-items: baseline;
 }
 
 a {
@@ -32,7 +27,12 @@ a {
   color: #fff;
   text-decoration: none;
   text-align: center;
-  display: inline;
+}
+
+ul {
+  justify-content: space-between;
+  align-items: stretch;
+  display: flex;
 }
 
 ul li {
@@ -40,6 +40,5 @@ ul li {
 }
 
 img {
-  display: flex;
   width: 5rem;
 }
