Add display: inline-flex

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,12 @@ h2 {
   font-weight: bold;
 }
 
+.hgroup,
+p,
+a {
+  display: inline-flex;
+}
+
 a {
   background-color: #444;
   padding: .6rem;
